samples/_failures_safe/1761368384_dafffe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91d219cf.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_91d219cf.c:186:20: error: missing terminating " character
  186 |             printf("Vertex %
      |                    ^~~~~~~~~
./samples/SAFE/__tmp_91d219cf.c:186:13: error: expected expression at end of input
  186 |             printf("Vertex %
      |             ^~~~~~
./samples/SAFE/__tmp_91d219cf.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91d219cf.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91d219cf.c:186:13: error: expected declaration or statement at end of input
